[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdreaming"
version = "0.1.0"
dependencies = [
    "streamlit",
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "opencv-python-headless",
    "ipykernel",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "hypothesis[pytest]",
    "pytest-cov",
    "black[jupyter]",
    "isort",
    "mypy",
    "ruff",
    "tox"
]

[tool.pytest.ini_options]
addopts = "--cov=deepdreaming"

testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "deepdreaming/utils.py" # no need to test it
]

[tool.black]
line-length = 119
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 119

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = [
    ".venv/",
    "build/",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepdreaming", "app"]

[tool.tox]
requires = ["tox>=4"]
env_list = ["lint", "type", "format", "3.12"]

[tool.tox.env_run_base]
description = "run unit tests"
extras = ["dev"]
commands = [
    ["pytest", "tests"]
]

[tool.tox.env.lint]
description = "run linters"
skip_install = true
deps = [
    "ruff",
]
commands = [
    ["ruff", "check", "."]
]

[tool.tox.env.format]
description = "run code formatters"
skip_install = true
deps = [
    "black",
    "isort",
]
commands = [
    ["black", "--check", "."],
    ["isort", "--check", "."]
]

[tool.tox.env.type]
description = "run type checks"
skip_install = true
deps = ["mypy"]
commands = [
    ["mypy", "."]
]